# flashpoint

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  goals.md  raft.yaml
configs/: raft.yaml  raft1.yaml  raft2.yaml  raft3.yaml
docs/: index.md
docs/raft/: config_change.md
protos/: api.proto  kv.proto  log.proto  raft.proto  storage.proto  test.proto
src/: CMakeLists.txt  main.cpp
src/cmd/: cmd.cpp  server.cpp
src/containers/: channel.cpp  subject.cpp
src/include/cmd/: cmd.hpp  server.hpp
src/include/containers/: channel.hpp  concurrent_linked_list.hpp  concurrent_queue.hpp  subject.hpp
src/include/keyvalue/: grpc.hpp  keyvalue.hpp  operation.hpp
src/include/keyvalue/plugins/: grpc.hpp  raft.hpp
src/include/keyvalue/storage/: simple_storage.hpp
src/include/public/: grpc.h  grpc.hpp
src/include/raft/: clerk.hpp  client.hpp  errors.hpp  grpc.hpp  join_grpc.hpp  peer.hpp  protocol.hpp  raft.h  raft.hpp  raft2.hpp  state.hpp  util.hpp
src/include/raft/protocols/: grpc.hpp
src/include/storage/: document.hpp  engine.h  engine.hpp
src/include/storage/engines/: json_engine.h  json_engine.hpp  logger_engine.h  logger_engine.hpp  proto_engine.h  proto_engine.hpp  raft_clerk_engine.h  raft_clerk_engine.hpp
src/include/util/: concurrent_queue.hpp  containers.hpp  encoding.hpp  env.hpp  logger.hpp  random.hpp  thread_pool.hpp
src/keyvalue/: grpc.cpp  keyvalue.cpp
src/keyvalue/plugins/: grpc.cpp  raft.cpp
src/keyvalue/storage/: simple_storage.cpp
src/public/: grpc.cpp
src/raft/: clerk.cpp  client.cpp  errors.cpp  grpc.cpp  join_grpc.cpp  peer.cpp  protocol.cpp  raft.cpp  raft2.cpp  state.cpp  util.cpp
src/raft/protocols/: grpc.cpp
src/storage/: document.cpp
src/storage/engines/: json_engine.cpp  logger_engine.cpp  proto_engine.cpp  raft_clerk_engine.cpp
src/util/: containers.cpp  encoding.cpp  env.cpp  logger.cpp  random.cpp  thread_pool.cpp
test/: CMakeLists.txt
test/include/raft/: cluster.hpp  in_memory.h  in_memory.hpp  raft_tester.hpp
test/raft/: cluster.cpp  in_memory.cpp  leader_election.cpp  raft_tester.cpp  snapshot.cpp
